tests/baselines/reference/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.errors.txt
tests/cases/compiler/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts(5,20): error TS2507: Type 'number' is not a constructor function type.


==== tests/cases/compiler/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts (1 errors) ====
    module Alpha {
        export var x = 100;
    }
    
    class Beta extends Alpha.x {
                       ~~~~~~~
!!! error TS2507: Type 'number' is not a constructor function type.
    }